Account history sorting